added support for photos

--- a/templates/talkpagetemplate.html
+++ b/templates/talkpagetemplate.html
@@ -20,10 +20,7 @@
 <body>
 	<div id="header"></div>
 	<div id="talktitle">$title</div>
-	<div id="photo">
-		<img src="$photo" />
-		<div class="photocaption">$photocaption</div>
-	</div>
+	$photo
 	<div id="description">
 		<div class="subheader">Description</div>
 		<div id="talkdescription">$description</div>
