--- a/public/talkpages.css
+++ b/public/talkpages.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Encode+Sans+Expanded:300,400,600');
-body {	background-color: white;
+/*@import url('https://fonts.googleapis.com/css?family=Encode+Sans+Expanded:300,400,600');*/
+/*body {	background-color: white;
 		font-family: 'Encode Sans Expanded', sans-serif;
 		margin: 20px;
 	 }
@@ -8,9 +8,9 @@ body {	background-color: white;
     max-width: 900px;
     padding-left: 30px;
     padding-right: 30px;
-}
+}*/
 #talktitle {
-	font-size: 300%;
+	font-size: 250%;
 	margin-bottom: 20px;
 }
 #photo {
@@ -25,8 +25,6 @@ body {	background-color: white;
 	display: block;
 }
 #photo img {
-/*			width: 560px;
-	height: 258px;*/
 	width: 100%;
 	max-width: 600px;
 }
@@ -38,7 +36,7 @@ body {	background-color: white;
 	max-width: 960px;
 }
 .subheader {
-	font-size: 200%;
+	font-size: 150%;
 }
 .othersubheader {
 	display:inline;
@@ -61,11 +59,9 @@ body {	background-color: white;
 .inlinelistitem:last-child:after {
 	content: "";
 }
-
 #slides {
 	margin-bottom:20px;
 }
-
 #presentations ul {
 	list-style: none;
 	padding-left: .6em;
@@ -79,7 +75,6 @@ body {	background-color: white;
 .conferencedate {
 	font-style: italic;
 }
-
 #reactions ul {
 	list-style: none;
 	padding-left: .6em;
@@ -89,4 +84,10 @@ body {	background-color: white;
 }
 .quote {
 	font-style: italic;
+}
+.twoColLiqRtHdr #mainContent {
+	   margin: 0 1em 0 1em;
+}
+.twoColLiqRtHdr #mainContent a:link {
+	   color: #550000;
 }
