updated conferences and styling on workshops/panels

--- a/templates/indexpagetemplate.html
+++ b/templates/indexpagetemplate.html
@@ -63,8 +63,14 @@
 		.panel-list {
 			padding-left: 1em;
 		}
+		.panel-list .talk-title {
+			font-weight: 600;
+		}
 		.workshop-list {
 			padding-left: 1em;
+		}
+		.workshop-list .talk-title {
+			font-weight: 600;
 		}
 		#map_wrapper {
 			height: 400px;
