--- a/templates/indexpagetemplate.html
+++ b/templates/indexpagetemplate.html
@@ -104,34 +104,34 @@
 			</ul>
 		</div>
 	</header>
-	<div id="mainContent">
+	<div id="content">
 		<div id="map_wrapper">
 	    	<div id="map_canvas" class="mapping"></div>
 		</div>
-		<div id="featured-talks">
-			<div class="subheader">Current Talks</div>
+		<section id="featured-talks">
+			<h2>Current Talks</div>
 			<ul>
 				$currenttalklist
 			</ul>
-		</div>
-		<div id="other-talks">
-			<div class="subheader">Older Talks</div>
+		</section>
+		<section id="other-talks">
+			<h2>Older Talks</h2>
 			<ul class="year-list">
 				$othertalklist
 			</ul>
-		</div>
-		<div id="panels">
-			<div class="subheader">Panels</div>
+		</section>
+		<section id="panels">
+			<h2>Panels</h2>
 			<ul class="panel-list">
 				$panellist
 			</ul>
-		</div>
-		<div id="workshops">
-			<div class="subheader">Workshops</div>
+		</section>
+		<section id="workshops">
+			<h2>Workshops</h2>
 			<ul class="workshop-list">
 				$workshoplist
 			</ul>
-		</div>
+		</section>
 	<!-- end #mainContent -->
 	</div>
 	<footer>
