--- a/templates/writing-template.html
+++ b/templates/writing-template.html
@@ -15,6 +15,39 @@
     <!-- Google ownership links -->
     <link rel="author" href="https://plus.google.com/+KevinGoldsmith"/>
     <link rel="publisher" href="https://plus.google.com/111904464094073716491" />
+
+    <style>
+        #content {
+            padding-top:4em;
+        }
+        .articlelist {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+        .article {
+            margin-bottom: 1em;
+        }
+        .articledate {
+            font-style: italic;            
+        }
+        .keywordlist {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+        .keyword {
+            display: inline;
+            margin-right: 1em;
+            font-size: .8em;
+            background: #DDDDDD;
+            padding: .1em .4em .1em .4em;
+        }
+        .keyword:last-child:after
+        {
+            margin-right: 0;
+        }
+    </style>
 </head>
 <body>
     <header id="header">
@@ -30,8 +63,7 @@
         </div>
     </header>
     <div id="content">
-        <h1>Writing</h1>
-        <ul>
+        <ul class="articlelist">
             $writinglist
         </ul>
     </div>
