--- a/templates/writing-template.html
+++ b/templates/writing-template.html
@@ -29,7 +29,7 @@
             margin-bottom: 1em;
         }
         .articledate {
-            font-style: italic;            
+            font-style: italic;
         }
         .keywordlist {
             list-style: none;
@@ -47,7 +47,7 @@
         {
             margin-right: 0;
         }
-        
+
         [data-toggle='on'] {
           display:block;
         }
@@ -71,7 +71,9 @@
         </div>
     </header>
     <div id="content">
-        <div class="buttonlist"><button data-filter="ping" data-reset="true">Reset</button>$tagbuttons</div>
+        <div class="buttonlist">
+            <button onclick="resetFilter('articlelist')">Reset</button>$tagbuttons
+        </div>
         <ul class="articlelist">
             $writinglist
         </ul>
@@ -121,20 +123,6 @@
                 });
             });
         });
-        document.addEventListener('click', function (e) {
-            var button = e.target;
-
-            if (button.getAttribute('data-reset') === 'true') {
-                // Reset the filters
-                var filter = button.getAttribute('data-filter');
-                resetFilter(filter);
-            } else {
-                // Filter the tag
-                var filter = button.getAttribute('data-filter');
-                var tag    = button.getAttribute('data-filter-tag');
-                filterTag(filter, tag);
-            }
-        });
 
         // Filter tag
         function filterTag (filter, tag) {
@@ -154,11 +142,11 @@
 
         // Reset filters
         function resetFilter (filter) {
-        var items = document.querySelectorAll('.' + filter + ' > li');
+            var items = document.querySelectorAll('.' + filter + ' > li');
 
-        for (var i = 0; i < items.length; i++) {
-        items[i].setAttribute('data-toggle', 'on');
-        }
+            for (var i = 0; i < items.length; i++) {
+                items[i].setAttribute('data-toggle', 'on');
+            }
         }
         </script>
     </body>
