--- a/templates/talkpagetemplate.html
+++ b/templates/talkpagetemplate.html
@@ -14,20 +14,7 @@
     <link rel="author" href="$googauthor"/>
     <link rel="publisher" href="$googpublisher" />
 
-	<!-- Google Analytics -->
-	<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-	ga('create', 'UA-2753331-2', 'auto');
-	ga('send', 'pageview');
-	</script>
-	<!-- End Google Analytics -->
-
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/genericons.css" />
 	<link rel="stylesheet" href="talkpages.css" />
 </head>
 <body>
@@ -37,9 +24,9 @@
 			<ul>
 				<li><a href="../resume.html">technology leader</a></li>
 				<li class="current-page"><a href="index.html">speaker</a></li>
-				<li>writer</li>
-				<li><a href="../music/index.html">musician</a></li>
-				<li>photographer</li>
+				<li><a href="../writing.html">writer</a></li>
+				<li><a href="../music.html">musician</a></li>
+				<li><a href="../photography.html">photographer</a></li>
 			</ul>
 		</div>
 	</header>
@@ -64,5 +51,7 @@
 	<footer>
 		kevingoldsmith.com
 	</footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="../js/googleevents.js"></script>
 </body>
 </html>
