added upcoming conferences

--- a/templates/indexpagetemplate.html
+++ b/templates/indexpagetemplate.html
@@ -95,6 +95,7 @@
 		<div id="map_wrapper">
 	    	<div id="map_canvas" class="mapping"></div>
 		</div>
+		$futuretalks
 		<section id="featured-talks">
 			<h2>Current Talks</h2>
 			<ul>
