formatting clean up

--- a/templates/indexpagetemplate.html
+++ b/templates/indexpagetemplate.html
@@ -32,6 +32,10 @@
 		#featured-talks .talk-title {
 			font-weight: 800;
 		}
+		#upcoming-talks ul {
+			list-style: none;
+			padding-left: 1em;
+		}
 		.year-list {
 			list-style: none;
 			padding-left: 1em;
