--- a/templates/indexpagetemplate.html
+++ b/templates/indexpagetemplate.html
@@ -84,7 +84,7 @@
 </head>
 <body>
 	<header id="header">
-		<h1 id="name"><a href="index.html">Kevin Goldsmith</a></h1>
+		<h1 id="name"><a href="../index.html">Kevin Goldsmith</a></h1>
 		<div id="site-nav">
 			<ul>
 				<li><a href="../resume.html">technology leader</a></li>
