added extra files from old site

--- a/templates/talkpagetemplate.html
+++ b/templates/talkpagetemplate.html
@@ -31,6 +31,7 @@
 		</div>
 	</header>
 	<div id="content">
+		<div><a href="index.html">talks></a></div>
 		<h1 id="talktitle">$title</h1>
 		$photo
 		<div id="description">
