--- a/templates/writing-template.html
+++ b/templates/writing-template.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=contain">
     <title>writing: Kevin Goldsmith</title>
-    <meta name="description" content="Music created by Kevin Goldsmith">
+    <meta name="description" content="Articles written by Kevin Goldsmith">
     <meta name="author" content="Kevin Goldsmith">
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
 
