--- a/templates/talkindexpagetemplate.html
+++ b/templates/talkindexpagetemplate.html
@@ -9,6 +9,7 @@
     <meta name="author" content="$author">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="$googsiteverification" />
+	<link rel="canonical" href="https://kevingoldsmith.com/talks/" />
 
     <!-- Google ownership links -->
     <link rel="author" href="$googauthor"/>
