--- a/templates/talkpagetemplate.html
+++ b/templates/talkpagetemplate.html
@@ -9,13 +9,14 @@
     <meta name="author" content="$author" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google-site-verification" content="$googsiteverification" />
-
+    <link rel="canonical" href="https://kevingoldsmith.com/talks/$filename" />
+    
     <!-- Google ownership links -->
     <link rel="author" href="$googauthor"/>
     <link rel="publisher" href="$googpublisher" />
 
     <link rel="stylesheet" href="../css/main.css" />
-	<link rel="stylesheet" href="talkpages.css" />
+    <link rel="stylesheet" href="talkpages.css" />
 </head>
 <body>
 	<header id="header">
