--- a/templates/writing-template.html
+++ b/templates/writing-template.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Articles written by Kevin Goldsmith">
     <meta name="author" content="Kevin Goldsmith">
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
+    <link rel="canonical" href="https://kevingoldsmith.com/writing.html" />
 
     <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
     <link rel="stylesheet" href="css/main.css" />
