--- a/templates/writing-template.html
+++ b/templates/writing-template.html
@@ -76,11 +76,7 @@
         <h1 id="name"><a href="index.html">Kevin Goldsmith</a></h1>
         <div id="site-nav">
             <ul>
-                <li><a href="resume.html">technology leader</a></li>
-                <li><a href="talks/index.html">speaker</a></li>
-                <li class="current-page">writer</li>
-                <li><a href="music.html">musician</a></li>
-                <li><a href="photography.html">photographer</a></li>
+                $sitenav
             </ul>
         </div>
     </header>
