fixed navigation for talks pages

--- a/templates/talkpagetemplate.html
+++ b/templates/talkpagetemplate.html
@@ -23,11 +23,7 @@
 		<h1 id="name"><a href="index.html">Kevin Goldsmith</a></h1>
 		<div id="site-nav">
 			<ul>
-				<li><a href="../resume.html">technology leader</a></li>
-				<li class="current-page"><a href="index.html">speaker</a></li>
-				<li><a href="../writing.html">writer</a></li>
-				<li><a href="../music.html">musician</a></li>
-				<li><a href="../photography.html">photographer</a></li>
+                $sitenav
 			</ul>
 		</div>
 	</header>
