get rid of non-seo-valuable h1s and replace with divs more switching to absolute paths in generated files. Writing and Talks is done

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,6 +37,10 @@ header {
 #name {
 	margin: 0 0 0.1em 0.05em;
 	line-height: 80%;
+	font-size: 2em;
+	font-family: 'Roboto Slab', serif;
+	font-weight: bold;
+	display: block;
 }
 #name a {
 	color: #000000;
