--- a/templates/talkpagetemplate.html
+++ b/templates/talkpagetemplate.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<header id="header">
-		<h1 id="name"><a href="index.html">Kevin Goldsmith</a></h1>
+        <div id="name"><a href="$siteroot">Kevin Goldsmith</a></div>
 		<div id="site-nav">
 			<ul>
                 $sitenav
@@ -28,7 +28,7 @@
 		</div>
 	</header>
 	<div id="content">
-		<div><a href="index.html">talks></a></div>
+		<div><a href="$talkroot">talks></a></div>
 		<h1 id="talktitle">$title</h1>
 		$photo
 		<div id="description">
