--- a/templates/writing-template.html
+++ b/templates/writing-template.html
@@ -73,7 +73,7 @@
 </head>
 <body>
     <header id="header">
-        <h1 id="name"><a href="index.html">Kevin Goldsmith</a></h1>
+        <div id="name"><a href="$siteroot">Kevin Goldsmith</a></div>
         <div id="site-nav">
             <ul>
                 $sitenav
