--- a/templates/talkindexpagetemplate.html
+++ b/templates/talkindexpagetemplate.html
@@ -85,7 +85,7 @@
 </head>
 <body>
 	<header id="header">
-		<h1 id="name"><a href="../index.html">Kevin Goldsmith</a></h1>
+        <div id="name"><a href="$siteroot">Kevin Goldsmith</a></div>
 		<div id="site-nav">
 			<ul>
                 $sitenav
