--- a/templates/music-template.html
+++ b/templates/music-template.html
@@ -70,20 +70,16 @@
 </head>
 <body>
     <header id="header">
-        <div id="name"><a href="index.html">Kevin Goldsmith</a></div>
+        <div id="name"><a href="$siteroot">Kevin Goldsmith</a></div>
         <div id="site-nav">
             <ul>
-                <li><a href="resume.html">technology leader</a></li>
-                <li><a href="talks/">speaker</a></li>
-                <li><a href="writing.html">writer</a></li>
-                <li class="current-page">musician</li>
-                <li><a href="photography.html">photographer</a></li>
+                $sitenav
             </ul>
         </div>
     </header>
     <div id="content">
         <div class="ut"><iframe class="ut youtube" src="//www.youtube.com/embed/Qw3YQL2Z_ZE?rel=0" frameborder="0" allowfullscreen></iframe></div>
-        <h2>Solo Recordings (<a class="outbound" href="https://answerstoapril.com/">Answers to April</a>)</h2>
+        <h2>Solo Recordings (<a href="https://answerstoapril.com/">Answers to April</a>)</h2>
         <section id="A2ASoloReleases" class="release-box-list">
             <h3>Solo Releases</h3>
             <ul>
@@ -186,7 +182,7 @@
                 <li>16 Shades of Spring - Magical Pony Productions - Produced several new longform musical compositions and vignettes for original theatre production - presented at The Empty Space Theatre, Seattle, WA - <span class="release-year">1996</span></li>
                 <li><span class="release-band">The Queen Annes</span> - Cello Arrangement - <span class="release-song">Please Don't Go</span> - <span class="release-recordlabel">Vagrant Records</span>, <span class="release-media">CD</span>, <span class="release-year">1999</span></li>
                 <li>Sundance Film Festival - Hammered Design / Disney Pictures Inc. - Conceptual Sound Design for 1999 Sundance Film Festival Trailers</li>
-                <li><a href="http://fourthdimensionapp.com/" target="_new">The Fourth Dimension</a> -  Drew Olbrich/Gilles Dezeustre, iPhone/iPad application, 2012 - Sound Design</li>
+                <li><a class="outbound" href="http://fourthdimensionapp.com/" target="_new">The Fourth Dimension</a> -  Drew Olbrich/Gilles Dezeustre, iPhone/iPad application, 2012 - Sound Design</li>
             </ul>
         </section>
     </div>
