--- a/templates/photography-template.html
+++ b/templates/photography-template.html
@@ -50,14 +50,10 @@
 <body>
 <!-- thanks to https://codepen.io/eksch/pen/xwdOeK for the page navigation code example (I had to tweak some)  -->
 	<header id="header">
-        <div id="name"><a href="index.html">Kevin Goldsmith</a></div>
+        <div id="name"><a href="$siteroot">Kevin Goldsmith</a></div>
 		<div id="site-nav">
 			<ul>
-				<li><a href="resume.html">technology leader</a></li>
-				<li><a href="talks/index.html">speaker</a></li>
-				<li><a href="writing.html">writer</a></li>
-				<li><a href="music.html">musician</a></li>
-				<li class="current-page">photographer</li>
+				$sitenav
 			</ul>
 		</div>
 	</header>
@@ -73,13 +69,13 @@
     <script type="text/javascript">
     function resizeIframe()
     {
-        $("#ifrm").css("height", $(window).height() - $("#header").position().top - $("#header").height() - $("#footer").height() - 60);
+        $$("#ifrm").css("height", $$(window).height() - $$("#header").position().top - $$("#header").height() - $$("#footer").height() - 60);
     }
 
-    $(document).ready(function()
+    $$(document).ready(function()
     {
     	resizeIframe()             
-        $(window).resize(function(event) {
+        $$(window).resize(function(event) {
             /* Act on the event */
             resizeIframe();
         });
