--- a/templates/site-index-template.html
+++ b/templates/site-index-template.html
@@ -142,11 +142,7 @@
 	<div id="header"><h1>Kevin Goldsmith</h1></div>
 	<div id="menu">
 		<ul>
-			<li><a href="resume.html">technology leader</a></li>
-			<li><a href="talks/">speaker</a></li>
-			<li><a href="writing.html">writer</a></li>
-			<li><a href="music.html">musician</a></li>
-			<li><a href="photography.html">photographer</a></li>
+			$sitenav
 		</ul>
 		<div id="links">
 			<span class="myButton"><a class="outbound" href="http://twitter.com/kevingoldsmith"><span class="genericon genericon-twitter"></span></a></span>
